<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/connection_fragment"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/appbar_padding_top"
              tools:context=".views.ConnectionFragment">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/toggle_bluetooth" android:textStyle="bold" android:textSize="@dimen/main_fragment_text_size"
                  android:layout_alignParentStart="true" android:layout_toStartOf="@+id/bluetooth_toggle"
                  android:layout_centerVertical="true"/>
        <ToggleButton android:id="@+id/bluetooth_toggle" android:layout_width="wrap_content"
                      android:layout_height="wrap_content" android:textOn="@string/bluetooth_enabled"
                      android:textOff="@string/bluetooth_disabled" android:layout_alignParentEnd="true"
                      android:layout_centerVertical="true"/>
    </RelativeLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/paired_devices" android:textStyle="bold" android:textSize="@dimen/main_fragment_text_size"/>
    <ListView android:id="@+id/paired_devices_list" android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
</LinearLayout>
