<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/data_fragment"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/appbar_padding_top"
              tools:context=".views.DataFragment">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/speed_text" android:textStyle="bold"
                  android:textSize="@dimen/speed_fragment_text_size" android:layout_alignParentStart="true"
                  android:layout_toStartOf="@+id/speed_text_view" android:layout_centerVertical="true"/>
        <TextView android:id="@+id/speed_text_view" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:text="@string/no_data_text" android:textStyle="bold"
                  android:textSize="@dimen/speed_fragment_text_size" android:layout_alignParentEnd="true"
                  android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/rpm_text" android:textStyle="bold"
                  android:textSize="@dimen/speed_fragment_text_size" android:layout_alignParentStart="true"
                  android:layout_toStartOf="@+id/rpm_text_view" android:layout_centerVertical="true"/>
        <TextView android:id="@+id/rpm_text_view" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:text="@string/no_data_text" android:textStyle="bold"
                  android:textSize="@dimen/speed_fragment_text_size" android:layout_alignParentEnd="true"
                  android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/load_text" android:textStyle="bold"
                  android:textSize="@dimen/speed_fragment_text_size" android:layout_alignParentStart="true"
                  android:layout_toStartOf="@+id/load_text_view" android:layout_centerVertical="true"/>
        <TextView android:id="@+id/load_text_view" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:text="@string/no_data_text" android:textStyle="bold"
                  android:textSize="@dimen/speed_fragment_text_size" android:layout_alignParentEnd="true"
                  android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:gravity="center">
        <Button android:id="@+id/log_button1" android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/log_button1" android:layout_weight="1" android:onClick="logButtonClick"/>
        <Button android:id="@+id/log_button2" android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/log_button2" android:layout_weight="1" android:onClick="logButtonClick"/>
        <Button android:id="@+id/log_button3" android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/log_button3" android:layout_weight="1" android:onClick="logButtonClick"/>
    </LinearLayout>
</LinearLayout>
